# jabuka

./: CMakeLists.txt  CMakePresets.json  README.md  applewindow.cpp  applewindow.h  applewindow.ui  main.cpp  searchdialog.ui  searchdialog.ui.autosave
